--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/cache": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "next": "10.0.3",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
+    "ramda": "^0.27.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.29.0"
   }
 }
