--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "env-cmd -f .env.test next dev"
   },
   "dependencies": {
     "@emotion/cache": "^11.0.0",
@@ -17,6 +18,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
+    "env-cmd": "^10.1.0",
     "next": "10.0.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
