--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.0",
     "date-fns": "^2.16.1",
     "env-cmd": "^10.1.0",
+    "material-ui-image": "^3.3.0",
     "next": "10.0.3",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
