--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "env-cmd": "^10.1.0",
     "material-ui-image": "^3.3.0",
     "next": "10.0.3",
+    "notistack": "^1.0.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
